# portal-disciplinas

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
OOP/array/: index.html
OOP/classes/: index.html
OOP/construtores/: index.html
OOP/exception/: index.html
OOP/heranca/: index.html
OOP/interface/: index.html
OOP/java-intro/: index.html
OOP/metodos/: index.html
OOP/oop/: index.html
OOP/orientacao-objetos/: index.html
OOP/paradigma-programacao/: index.html
OOP/quatro-pilares/: index.html
algoritmos_e_programação/algo/: index.html
algoritmos_e_programação/arquivos/: index.html
algoritmos_e_programação/exercicios-simples/: index.html
algoritmos_e_programação/perguntas-e-respostas-python/: index.html
algoritmos_e_programação/teste/: index.html
algoritmos_e_programação/turtle/: index.html
arvores/: index.html
banco_de_dados/django_mysql/: index.html
banco_de_dados/entidade-relacionamento/: index.html
banco_de_dados/exercicio_sql/: index.html
banco_de_dados/ini/: index.html
banco_de_dados/normalizacao/: index.html
banco_de_dados/nosql/: index.html
banco_de_dados/relacional/: index.html
banco_de_dados/sql/: index.html
docs/: arvores.md  index.md  sobre.md
docs/OOP/: array.md  classes.md  construtores.md  exception.md  heranca.md  interface.md  java-intro.md  metodos.md  oop.md  orientacao-objetos.md  paradigma-programacao.md  quatro-pilares.md
docs/banco_de_dados/: ini.md  (+7 more)
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
sobre/: index.html
(+62 files in other folders)
