[tool.poetry]
name = "git_como_usar"
version = "0.1.0"
description = "Projeto de alunos da Univesp para aprender e compartilhar informações sobre o git"
authors = ["Igor Esposito <sposigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
